--- a/week_2/Exercise_3.2.1.ipynb
+++ b/week_2/Exercise_3.2.1.ipynb
@@ -28,15 +28,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The most effective way to represent documents as sets, for the purpose of identifying lexically similar documents is to construct from the document the set of short strings that appear within it.\n",
-      "First ten 3-shingles in testing_sentence:['The', 'he ', 'e m', ' mo', 'mos', 'ost', 'st ', 't e', ' ef', 'eff']\n",
+      "Given sentence ==  The most effective way to represent documents as sets, for the purpose of identifying lexically similar documents is to construct from the document the set of short strings that appear within it. \n",
+      "\n",
+      "First ten 3-shingles in text ==> [['The', 'most', 'effective'], ['most', 'effective', 'way'], ['effective', 'way', 'to'], ['way', 'to', 'represent'], ['to', 'represent', 'documents'], ['represent', 'documents', 'as'], ['documents', 'as', 'sets'], ['as', 'sets', 'for'], ['sets', 'for', 'the'], ['for', 'the', 'purpose']]\n",
       "finally block is executed wheather exception is handled or not!!\n"
      ]
     }
@@ -52,11 +53,11 @@
     "def main():\n",
     "    # try block for execution\n",
     "    try:\n",
-    "        # Printing testing sentence\n",
-    "        print(testing_sentence)\n",
-    "        # printing first ten singhles from the given sentence.\n",
-    "        print(\"First ten 3-shingles in testing_sentence:\" + str([testing_sentence[x:x + k] for x in range(0,10)]))\n",
-    "        # catching the exception \n",
+    "        # printing given text\n",
+    "        print('Given sentence == ', testing_sentence, '\\n')\n",
+    "        # splitting after replacing comma and storing data on cleaned_sentence variable\n",
+    "        cleaned_sentence = testing_sentence.replace(',', '').split()\n",
+    "        print(\"First ten 3-shingles in text ==> \" + str([cleaned_sentence[x:x + k] for x in range(0, 10)]))  # Print 3-shingles\n",
     "    except Exception as exception:\n",
     "        # printing the exception in nice way.\n",
     "        print('An exception of type {0} occurred.  Arguments:\\n{1!r}'.format(type(exception).__name__, exception.args));  \n",
@@ -64,6 +65,7 @@
     "        print(\"finally block is executed wheather exception is handled or not!!\")\n",
     "\n",
     "if __name__ == '__main__':\n",
+    "    # calling function from main function\n",
     "    main()\n"
    ]
   },
