--- a/Week_6/Descision_Tree_Part_b.ipynb
+++ b/Week_6/Descision_Tree_Part_b.ipynb
@@ -19,12 +19,13 @@
     "# DSC550 - Data Mining\n",
     "# Date: 07/08/2020\n",
     "# Problem:1(Decision_Tree_for_max_depth_2_and_4)\n",
+    "# Impoting required libraries\n",
     "\n",
     "\n",
     "\n",
     "import pandas as pd\n",
-    "from sklearn.tree import DecisionTreeClassifier # Import Decision Tree Classifier\n",
-    "from sklearn.model_selection import train_test_split # Import train_test_split function\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn import metrics \n",
     "from sklearn.tree import export_graphviz\n",
     "from sklearn.externals.six import StringIO  \n",
