--- a/week_8/Exercise_11.3.2.ipynb
+++ b/week_8/Exercise_11.3.2.ipynb
@@ -211,7 +211,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# From above result, she likes romantice movie silghtly more.\n",
+    "# From above result, she likes romantic movie silghtly more than others.\n",
     "# Thanks!!!"
    ]
   }
